# DBD-Auto-Checker

./: .gitignore  CMakeLists.txt  Config.hpp  KeyboardEventsM.hpp  README.md  gui.hpp  hwnd2mat.hpp  imageProcessFunctions.hpp  main.cpp  testFill.cpp  testPress.cpp
scripts/: releaseCode.go
